--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,16 @@
 </head>
 
 <body>
-  hello, world
+  <div>
+    headers
+  </div>
+  <div>
+    tags
+  </div>
+  <div>
+    movie list<br />
+    <script src="index.js"></script>
+  </div>
 </body>
 
 </html>
