--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,14 @@
 </head>
 
 <body>
+  <script src="index.js"></script>
   <div>
     headers
   </div>
   <div>
     tags
   </div>
-  <div>
-    movie list<br />
-    <script src="index.js"></script>
+  <div id="movie_list">
   </div>
 </body>
 
